appId: com.atomczak.notepat
---
- stopApp
- launchApp
- runFlow: ../subflows/dismiss_common_interruptions.yaml
- extendedWaitUntil:
    visible:
      id: new_note_fab
    timeout: 5000
- tapOn:
    id: action_sort
    optional: true
- tapOn:
    text: "More options"
    optional: true
- tapOn:
    text: "SORT"
    optional: true
- extendedWaitUntil:
    visible: "Sort by"
    timeout: 5000
- tapOn: "title: A to Z"
- tapOn:
    id: action_sort
    optional: true
- tapOn:
    text: "More options"
    optional: true
- tapOn:
    text: "SORT"
    optional: true
- waitForAnimationToEnd
- extendedWaitUntil:
    visible:
      id: new_note_fab
    timeout: 5000
- assertNotVisible: "Sort by"
- extendedWaitUntil:
    visible: "Note Gamma"
    timeout: 3000
- extendedWaitUntil:
    visible: "Note Beta"
    timeout: 3000
