appId: com.atomczak.notepat
env:
  F02_NOTE_TITLE: ${F02_NOTE_TITLE || "Note Beta"}
---
- stopApp
- launchApp
- runFlow: ../subflows/dismiss_common_interruptions.yaml
- extendedWaitUntil:
    visible:
      id: new_note_fab
    timeout: 5000
- longPressOn:
    text: ${F02_NOTE_TITLE}
- tapOn:
    text: "Delete"
    optional: true
- tapOn:
    text: "More options"
    optional: true
- tapOn:
    text: "Delete"
    optional: true
- extendedWaitUntil:
    visible: "Delete the selected notes?"
    timeout: 5000
- tapOn: "OK"
- extendedWaitUntil:
    visible:
      id: new_note_fab
    timeout: 5000
- assertNotVisible: ${F02_NOTE_TITLE}
- tapOn:
    text: "Open navigation drawer"
- tapOn:
    text: "Trash"
- assertVisible: ${F02_NOTE_TITLE}

#Screen size may different based on the emulater or device used. so we adding the optional flag in our test.